# Reader

./: .editorconfig  .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  run_piper_demo.bat  setup_reader.bat
.github/workflows/: windows-build.yml
assets/: lexicon.es.json
assets/voices/: README.md
docs/: CODEX_PACKAGE.md  STATUS.md  TROUBLESHOOTING.md
samples/: README.md
scripts/py/: README.md  epub_extract.py  generate_samples.py  import_epub.py  import_pdf.py  pdf_extract.py
scripts/windows/: README.md  dev_check.ps1  fetch_voices.ps1  run_piper_demo.bat  setup_reader.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/audio/: mod.rs  player.rs
src-tauri/src/cmds/: audio.rs  audio_controls.rs  encode.rs  import_epub.rs  import_pdf.rs  import_text.rs  mod.rs  speak.rs  voices.rs
src-tauri/src/dict/: lexicon.rs  mod.rs
src-tauri/src/ssml/: mod.rs  segment.rs
src-tauri/src/util/: logging.rs  mod.rs  piper_path.rs  runtime.rs
ui/: .eslintrc.cjs  index.html  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: Controls.tsx  ExportMenu.tsx  QueueList.tsx  VoiceSelector.tsx
ui/src/components/__tests__/: Controls.test.tsx
ui/src/lib/: tauri.ts
ui/src/pages/: Dictionary.tsx  Library.tsx  Reader.tsx
ui/src/state/: playerStore.ts
ui/src/store/: playerStore.test.ts  playerStore.ts
