[package]
name = "reader"
version = "0.1.0"
edition = "2021"
authors = ["Reader Contributors"]
description = "Reader MVP backend"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
flexi_logger = { version = "0.27", default-features = false, features = ["colors", "compress"] }
regex = "1"
rodio = { version = "0.17", default-features = false, features = ["wav"] }
once_cell = "1"
tauri = { version = "2.0.0-beta.18", features = ["macros", "wry"] }
which = "4"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
serial_test = "2"
