[package]
name = "reader-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
flexi_logger = "0.27"
log = "0.4"
parking_lot = "0.12"
regex = "1.10"
rodio = { version = "0.17", default-features = false, features = ["wav"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.2"
thiserror = "1.0"
tauri = { version = "1.5", features = ["dialog-open", "fs-read-file", "fs-write-file", "macros", "path-all"] }
time = { version = "0.3", features = ["formatting"] }
walkdir = "2.4"

[dev-dependencies]
assert_fs = "1.0"
serde_json = "1.0"
tempfile = "3.8"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
